# vtable-hook

./: CMakeLists.txt  LICENSE
include/vtable-hook/: vtable-hook.hpp
include/vtable-hook/details/: Itanium_VFuncPtr.hpp  MSVC_VFuncPtr.hpp  write_to_protected_mem.hpp
